# OpenTermX

./: README.md  STACK.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: credentials.rs  mod.rs  sessions.rs  sftp.rs  ssh.rs  tunnel.rs  workspace_transfer.rs
src-tauri/src/models/: credential.rs  mod.rs  session.rs  tunnel.rs  workspace_transfer.rs
src-tauri/src/storage/: db.rs  mod.rs
src-tauri/target-sftp-check/: .rustc_info.json
src-tauri/target-sftp-check/debug/.fingerprint/adler2-708dea00d6a216f0/: lib-adler2  lib-adler2.json
src-tauri/target-sftp-check/debug/.fingerprint/ahash-1f91ace4ea87f7d9/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-sftp-check/debug/.fingerprint/ahash-ca42821deddbbe42/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-sftp-check/debug/.fingerprint/ahash-cb9fc8ad29a641b8/: lib-ahash  lib-ahash.json
src-tauri/target-sftp-check/debug/.fingerprint/aho-corasick-326a0284fd2c658f/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-sftp-check/debug/.fingerprint/aho-corasick-57fa3a6ee9629e6b/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-sftp-check/debug/.fingerprint/alloc-no-stdlib-5b70bb3317bfa780/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-sftp-check/debug/.fingerprint/cc-efe04dd3d132e9b2/: lib-cc  (+1 more)
(+938 files in other folders)
