[package]
name = "opentermx"
version = "0.1.3"
description = "OpenTermX desktop shell"
authors = ["OpenTermX"]
edition = "2021"

[lib]
name = "opentermx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", features = [] }
thiserror = "1"
